<resources>
    <string name="app_name">Daily News</string>
    <string name="website_url">https://www.google.com/</string>
    <string name="share_link">Share The Link</string>
    <string name="copy_the_link">Copy The Link</string>
    <!-- add bottom bar string -->
    <string name="tin">Find</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_unknown">Unknown Title</string>


    <string name="clear_cache">Clear Cache</string>
    <string name="setting">Setting</string>

    <string name="change_source">Change Source</string>
    <string name="de">de</string>
    <string name="us">us</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="passwordH">Password</string>
    <string name="passwordHC">Confirm password</string>
    <string name="backToLogin">Back to Login</string>
    <string name="titleNews">Title:</string>
    <string name="descriptionNews">Description:</string>
    <string name="usNews">US News</string>
    <string name="germanNews">German News</string>
    <string name="american">American</string>
    <string name="german">German</string>
</resources>
