<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".login"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- username tag-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:fontFamily="Roboto"
        android:textColor="#FF3F89E7"
        android:textSize="20sp"/>

    <!-- username edit area-->
    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="Roboto"
        android:hint="@string/username" />
    <!-- password tag-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Roboto"
        android:textSize="20sp"
        android:textColor="#FF3F89E7"
        android:text="@string/password" />

    <!-- password edit area-->
    <EditText
        android:fontFamily="Roboto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"
        android:hint="@string/passwordH"
        android:layout_gravity="center_horizontal" />
    <!-- button to login-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/login"
        android:fontFamily="Roboto"
        android:textColor="@android:color/white"
        android:background="@drawable/login_buttons"
        android:radius="10dp"
        android:id="@+id/submit" />
    <!-- button to register-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:background="@drawable/login_buttons"
        android:fontFamily="Roboto"
        android:id="@+id/register" />

    <ProgressBar

        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center_horizontal"
        tools:visibility="visible"/>
<!--        android:visibility="invisible"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/signUp"-->


</androidx.appcompat.widget.LinearLayoutCompat>
