<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="vertical"
    app:cardCornerRadius="7dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground">
        <TextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/four_dp"
            android:text="@string/titleNews"
            android:fontFamily="@font/dancing_script"
            android:maxLines="1"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_unknown"
            android:id="@+id/titleSaved"
            android:gravity="left"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxEms="10"
            android:fontFamily="@font/dancing_script"
            app:layout_constraintLeft_toRightOf="@id/title_label"
            app:layout_constraintTop_toTopOf="parent"/>
<!--        <TextView-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/author_unknown"-->
<!--            android:id="@+id/author"-->
<!--            android:gravity="left"-->
<!--            android:fontFamily="@font/dancing_script"-->
<!--            app:layout_constraintLeft_toRightOf="@id/author_label"-->
<!--            app:layout_constraintTop_toTopOf="parent"/>-->
        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/four_dp"
            android:text="@string/descriptionNews"
            android:fontFamily="@font/dancing_script"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/title_label"
            app:layout_constraintTop_toBottomOf="@id/title_label" />
        <View
            app:layout_constraintTop_toBottomOf="@id/description_label"
            android:id="@+id/description_delimiter"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintLeft_toLeftOf="@dimen/four_dp"
            android:layout_marginRight="12dp"
            android:background="@color/light_gray"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/four_dp"
            android:id="@+id/desciption"
            android:fontFamily="@font/indie_flower"
            app:layout_constraintLeft_toLeftOf="@id/title_label"
            app:layout_constraintTop_toBottomOf="@id/description_delimiter"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="@dimen/eight_dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/image"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

